# PlantedMarketplace

./: db.sqlite3  drizzle.config.ts  package-lock.json  package.json  pyproject.toml  sqlite.db  sqlite.db-shm  sqlite.db-wal  tailwind.config.ts  theme.json
attached_assets/: App.js  Pasted--Prompt-for-Replit-to-build-a-Horticulture-Marketplace-Planted-Project-Goal-Create-a-web-a-1736061616485.txt  Pasted-Job-Identification-210562225-Job-Category-Recruiting-Business-Unit-Commercial-Investment-Bank-Post-1737228187583.txt  expanded_plant_dataset (1).csv
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: CartDrawer.tsx  Footer.tsx  Header.tsx  NurseryProfileManager.tsx  PlantCard.tsx  ReviewSection.tsx  SearchFilters.tsx  SimilarPlants.tsx
client/src/hooks/: use-cart.ts  use-user.ts
client/src/lib/: cart-store.ts
client/src/pages/: AuthPage.tsx  CheckoutResult.tsx  Home.tsx  HomePage.tsx  NurseryDashboard.tsx  NurseryProfile.tsx  ProductPage.tsx
db/: index.ts  migrate.ts  schema.ts
scripts/: generate-hash.ts
server/: auth.ts  index.ts  manage.py  routes.ts  settings.py  start_django.py  urls.py
server/nursery_backend/: asgi.py  settings.py  urls.py  wsgi.py
server/plants/: admin.py  apps.py  models.py  serializers.py  views.py
server/plants/management/commands/: sample_plants.csv  seed_plants.py  setup_plants.py
server/plants/migrations/: 0001_initial.py  0002_plant_deer_resistant_plant_drought_tolerant_and_more.py  0003_plant_featured_plant_price_plant_quantity_and_more.py  0004_plant_category.py
